add client id to  screen

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,6 +35,7 @@
 <div class="container">
   <div class="title">
     <h1>Swiss on FHIR</h1>
+    <h2>{{window["env"]["clientId"]}}</h2>
   </div>
   <ng-container>
     <router-outlet></router-outlet>
