updated title for patient portal

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -34,8 +34,7 @@
 
 <div class="container">
   <div class="title">
-    <h1>Swiss on FHIR</h1>
-    <h2>{{window["env"]["clientId"]}}</h2>
+    <h1>Patient Portal App</h1>
   </div>
   <ng-container>
     <router-outlet></router-outlet>
